fixed speakers alignment in 768-992px

--- a/css/style.css
+++ b/css/style.css
@@ -1223,6 +1223,14 @@ textarea.input {
     margin:0;
     padding:0;
   }
+  .speaker-des{
+    padding-bottom:10%;
+  }
+  
+  .atri-sharma-des{
+    padding-bottom:2%;
+  }
+
 }
   
 }
